--- a/qa/Integration/basic_v3/master/create_ts_table.sql_5cr.master
+++ b/qa/Integration/basic_v3/master/create_ts_table.sql_5cr.master
@@ -1,8 +1,111 @@
 > create ts database test;
 CREATE TS DATABASE
-> create table test.sjcx01(k_timestamp timestamp not null,A INT4 not null,B INT4 not null,C VARCHAR(10) not null,D VARCHAR(10) not null)attributes (t1_attribute varchar not null) primary tags(t1_attribute);
+> create table test.sjcx01(k_timestamp timestamp not null,A INT4 null,B INT4 not null,C VARCHAR(10) null,D VARCHAR(10) not null)attributes (t1_attribute varchar not null) primary tags(t1_attribute);
 CREATE TABLE
 > insert into test.sjcx01 values (1681111110000,1,1,'A','DFFDARG', 'qqq');
 INSERT 1
 > insert into test.sjcx01 values (1681111110001,2,2,'B','DFFDARGD', 'qqq1');
 INSERT 1
+> insert into test.sjcx01 values (1681111110002,3,3,'C','A', 'A1');
+INSERT 1
+> insert into test.sjcx01 values (1681111110003,4,4,'D','B', 'B2');
+INSERT 1
+> insert into test.sjcx01 values (1681111110004,5,5,'E','C', 'C3');
+INSERT 1
+> insert into test.sjcx01 values (1681111110005,null,7,null,'D', 'D4');
+INSERT 1
+> insert into test.sjcx01 values (1681111110006,8,9,'G','E', 'E5');
+INSERT 1
+> insert into test.sjcx01 values (1681111110007,null,11,'H','F', 'F6');
+INSERT 1
+> insert into test.sjcx01 values (1681111110008,12,13,null,'G', 'G7');
+INSERT 1
+> select * from test.sjcx01 order by k_timestamp;
+  k_timestamp | a | b | c | d | t1_attribute
+--------------+---+---+---+---+---------------
+(0 rows)
+> select k_timestamp, A, B from test.sjcx01 order by k_timestamp;
+  k_timestamp | a | b
+--------------+---+----
+(0 rows)
+> select A, B from test.sjcx01 order by k_timestamp;
+  a | b
+----+----
+(0 rows)
+> select A from test.sjcx01 order by k_timestamp;
+  a
+-----
+(0 rows)
+> select C from test.sjcx01 order by k_timestamp;
+  c
+-----
+(0 rows)
+> select * from test.sjcx01 where k_timestamp > '2023-04-10 07:00:30+00:00' and k_timestamp <= '2023-04-10 08:00:30+00:00' order by k_timestamp;
+  k_timestamp | a | b | c | d | t1_attribute
+--------------+---+---+---+---+---------------
+(0 rows)
+> select * from test.sjcx01 where k_timestamp > '2023-04-10 07:18:30.002+00:00' and k_timestamp <= '2023-04-10 07:18:30.006+00:00' order by k_timestamp;
+  k_timestamp | a | b | c | d | t1_attribute
+--------------+---+---+---+---+---------------
+(0 rows)
+> select * from test.sjcx01
+where k_timestamp >= '2023-04-10 07:18:30.001+00:00' and k_timestamp < '2023-04-10 07:18:30.003+00:00'
+   or (k_timestamp > '2023-04-10 07:18:30.005+00:00' and k_timestamp <= '2023-04-10 07:18:30.009+00:00')
+order by k_timestamp;
+  k_timestamp | a | b | c | d | t1_attribute
+--------------+---+---+---+---+---------------
+(0 rows)
+> select count(*) from test.sjcx01;
+  count
+---------
+      0
+(1 row)
+> select * from test.sjcx01 where t1_attribute = 'F6';
+           k_timestamp          |  a   | b  | c | d | t1_attribute
+--------------------------------+------+----+---+---+---------------
+  2023-04-10 07:18:30.007+00:00 | NULL | 11 | H | F | F6
+(1 row)
+> drop database test cascade;
+DROP DATABASE
+> create ts database test_alter;
+CREATE TS DATABASE
+> create table test_alter.t2(ts timestamp not null, a smallint, b smallint, c smallint) tags(attr int not null) primary tags(attr);
+CREATE TABLE
+> insert into test_alter.t2 values(1672531211005, 100, 200, 300, 1);
+INSERT 1
+> alter table test_alter.t2 alter column a type int;
+ALTER TABLE
+> alter table test_alter.t2 alter column b type bigint;
+ALTER TABLE
+> alter table test_alter.t2 alter column c type varchar(120);
+ALTER TABLE
+> insert into test_alter.t2 values(1672531211015, 65536, 65539,  'test时间精度！！！@TEST2', 1);
+INSERT 1
+> select * from test_alter.t2 order by ts,attr;
+  ts | a | b | c | attr
+-----+---+---+---+-------
+(0 rows)
+> select a, b from test_alter.t2 order by ts,attr;
+  a | b
+----+----
+(0 rows)
+> create table test_alter.t9(ts timestamp not null, a char, b nchar(64)) tags(attr int not null) primary tags(attr);
+CREATE TABLE
+> insert into test_alter.t9 values(1672531211005,  't',  'test时间精度通用查询测试！！！@TEST3', 1);
+INSERT 1
+> alter table test_alter.t9 alter column a type char(128);
+ALTER TABLE
+> alter table test_alter.t9 alter column b type nchar(128);
+ALTER TABLE
+> insert into test_alter.t9 values(1672531211015,  'test时间精度！！！@TEST2',  'test时间精度通用查询测试！！！@TEST3', 1);
+INSERT 1
+> select * from test_alter.t9 order by ts,attr;
+  ts | a | b | attr
+-----+---+---+-------
+(0 rows)
+> select a, b from test_alter.t9 order by ts,attr;
+  a | b
+----+----
+(0 rows)
+> drop database if exists test_alter cascade;
+DROP DATABASE
