--- a/qa/Integration/basic_v3/master/create_ts_table.sql_5cr.master
+++ b/qa/Integration/basic_v3/master/create_ts_table.sql_5cr.master
@@ -118,10 +118,25 @@ order by k_timestamp;
   2023-04-10 07:18:30.007+00:00 | NULL | 11 | H    | F        | F6
   2023-04-10 07:18:30.008+00:00 |   12 | 13 | NULL | G        | G7
 (5 rows)
-> select count(*) from test.sjcx01;
-  count
----------
-      9
+> select count(*), count(c) from test.sjcx01;
+  count | count
+--------+--------
+      9 |     7
+(1 row)
+> select count(*), count(c) from test.sjcx01 where a is not null;
+  count | count
+--------+--------
+      7 |     6
+(1 row)
+> select count(a), count(distinct a) from test.sjcx01;
+  count | count
+--------+--------
+      7 |     7
+(1 row)
+> select max(b), sum(a) from test.sjcx01 where k_timestamp < k_timestamp;
+  max  | sum
+-------+-------
+  NULL | NULL
 (1 row)
 > select sum(a), min(b) from test.sjcx01;
   sum | min
@@ -133,6 +148,36 @@ order by k_timestamp;
 --------+-----+-----+------
       7 |  55 |  12 |  13
 (1 row)
+> select t1_attribute, count(c), sum(a), max(b), last(a) from test.sjcx01 group by t1_attribute order by t1_attribute;;
+  t1_attribute | count | sum  | max | last
+---------------+-------+------+-----+-------
+  A1           |     1 |    3 |   3 |    3
+  B2           |     1 |    4 |   4 |    4
+  C3           |     1 |    5 |   5 |    5
+  D4           |     0 | NULL |   7 | NULL
+  E5           |     1 |    8 |   9 |    8
+  F6           |     1 | NULL |  11 | NULL
+  G7           |     0 |   12 |  13 |   12
+  qqq          |     1 |    1 |   1 |    1
+  qqq1         |     1 |    2 |   2 |    2
+(9 rows)
+> select max(a+3), min(a+b) from test.sjcx01;
+  max | min
+------+------
+   15 |   2
+(1 row)
+> select a+b, sum(b) from test.sjcx01 group by a+b order by a+b;
+  ?column? | sum
+-----------+------
+      NULL |  18
+         2 |   1
+         4 |   2
+         6 |   3
+         8 |   4
+        10 |   5
+        17 |   9
+        25 |  13
+(8 rows)
 > select last(b), last(a) from test.sjcx01;
   last | last
 -------+-------
@@ -149,6 +194,26 @@ order by k_timestamp;
   2023-04-10 07:18:00+00:00 |  12
 (1 row)
 > drop database test cascade;
+DROP DATABASE
+> create ts database test_null;
+CREATE TS DATABASE
+> create table test_null.t1(k_timestamp timestamp not null,A INT4 null,B INT4 not null,C VARCHAR(10) null,D VARCHAR(10) not null)attributes (t1_attribute varchar not null) primary tags(t1_attribute);
+CREATE TABLE
+> insert into test_null.t1 values (1681111110000, null, 2, null, 'ABC', 'tag1');
+INSERT 1
+> insert into test_null.t1 values (1681111110001, null ,3, null, 'Xyz', 'tag2');
+INSERT 1
+> select count(*), count(a), sum(a), min(a), max(a), last(a) from test_null.t1;
+  count | count | sum  | min  | max  | last
+--------+-------+------+------+------+-------
+      2 |     0 | NULL | NULL | NULL | NULL
+(1 row)
+> select max(a+b) from test_null.t1;
+  max
+--------
+  NULL
+(1 row)
+> drop database test_null cascade;
 DROP DATABASE
 > create ts database test_alter;
 CREATE TS DATABASE
